    information when creating/updating a Task.
  * **Fix:** Selected 'Status' attribute for 'Task Dialog' in 'Update' mode is
      set when dialog is open.
  * **New:** Version List Page and Create/Update Dialogs are added.
  * **New:** Vacation List Page and Create/Update Dialogs are added.
  * **Fix:** Merge tested, and vacation adding is finished.
  * **New:** Version Page is created. It has Outputs,Inputs and Children as Tabs.
  * **New:** Studio Page is created.It has Tasks and Resources as Tabs.
  * **New:** Update Studio function id added.


  * **JQueryGantt:**

    * **Update:** Context menu can now be opened in task names in grid editor.
    * **Update:** Optimized the creation of task rows.
    * **Update:** Replaced the ``input`` elements with ``div`` in the task row.
    * **New:** Holding the mouse on Task bar elements will now show a popup
      window for more info.
    * **Update:** Gantt Chart zoom levels are now fully controlled by the start
      and end date DateTextBoxes.
    * **New:** Added a new button which will center the gantt chart on today.

0.2.0.b6
========

* **SOM**:
  
  * **Fix:** Fixed **LocalSession._write_data()**, previously it was not
    creating the local session folder.
  * **New:** Added a new method called **LocalSession.delete()** to remove the
    local session file.
  * **Update:** **Link.full_path** can now be set to an empty string. This is
    updated in this way for **Version** class.
  * **Update:** Updated the formatting of **SimpleEntity.nice_name**, it is now
    possible to have uppercase letters and camel case format will be preserved.
  * **Update**: **Version.take_name** formatting is enhanced.
  * **New**: **Task** class is now mixed in with **ReferenceMixin** making it
    unnecessary to have **Asset**, **Shot** and **Sequence** classes all mixed
    in individually. Thus removed the **ReferenceMixin** from **Asset**,
    **Shot** and **Sequence** classes.